# cook-helper-django-react

./: .gitignore  README.md  config.py  ingr_img_links.txt  parsing_meals_n_sh.py  pyproject.toml  requirements.txt  test.py  unique_cat.txt  unique_clean_measurem.txt  unique_ingr.txt  vercel.json  yanevivozhu.py  zlobik_rlly_asked.py
cook/: admin.py  insert_scripts.py  models.py  serializers.py  unique_cat.txt  urls.py  views.py
cook/migrations/: 0001_initial.py
cook_helper/: settings.py  urls.py  wsgi.py
