[tool.poetry]
name = "cook-helper"
version = "0.1.0"
description = ""
authors = [
        "Artem Zlobenko <artemzlobenko@gmail.com>",
        
    ]
readme = "README.md"
packages = [{include = "cook_helper"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
